# alibabacloud-odps-maxframe-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  setup.cfg
core/: .gitignore  MANIFEST.in  _cythonize_all.py  _setup_utils.py  pyproject.toml  setup.py
core/maxframe/: __init__.py  _utils.pxd  _utils.pyi  _utils.pyx  codegen.py  conftest.py  env.py  errors.py  extension.py  mixin.py  opcodes.py  protocol.py  session.py  sperunner.py  typing_.py  udf.py  utils.py
core/maxframe/codegen/: __init__.py  core.py
core/maxframe/codegen/spe/: __init__.py  core.py  objects.py  remote.py  utils.py
core/maxframe/codegen/tests/: test_codegen.py
core/maxframe/config/: __init__.py  config.py  validators.py
core/maxframe/config/tests/: test_config.py  test_validators.py
core/maxframe/core/: __init__.py  accessor.py  base.py  context.py  mode.py
core/maxframe/core/entity/: __init__.py  chunks.py  core.py  executable.py  fuse.py  objects.py  output_types.py  tileables.py  utils.py
core/maxframe/core/graph/: __init__.py  core.pyx  entity.py
core/maxframe/core/operator/: __init__.py  base.py  core.py  fetch.py  fuse.py  objects.py  shuffle.py  utils.py
core/maxframe/core/tests/: test_mode.py
core/maxframe/dataframe/: __init__.py  arrays.py  core.py  initializer.py  operators.py  type_infer.py  typing_.py  utils.py
core/maxframe/dataframe/accessors/: __init__.py  compat.py
core/maxframe/dataframe/arithmetic/: __init__.py  abs.py  add.py  arccos.py  arccosh.py  arcsin.py  arcsinh.py  arctan.py  arctanh.py  around.py  between.py  bitwise_and.py  bitwise_or.py  bitwise_xor.py  ceil.py  core.py  cos.py  cosh.py  degrees.py  docstring.py  dot.py  equal.py  exp.py  exp2.py  expm1.py  floor.py  floordiv.py  greater.py  greater_equal.py  invert.py  is_ufuncs.py  less.py  less_equal.py  log.py  log10.py  log2.py  maximum.py  minimum.py  mod.py  multiply.py  (+13 more)
core/maxframe/dataframe/datasource/: __init__.py  core.py  dataframe.py  date_range.py  direct.py  from_dict.py  from_index.py  from_records.py  from_tensor.py  index.py  read_csv.py  read_json.py  read_odps_query.py  read_odps_table.py  read_parquet.py  series.py  utils.py
core/maxframe/dataframe/datastore/: __init__.py  core.py  direct.py  to_csv.py  to_json.py  to_odps.py  to_parquet.py
core/maxframe/dataframe/extensions/: __init__.py  accessor.py  apply_chunk.py  cartesian_chunk.py  collect_kv.py  extract_kv.py  flatjson.py  flatmap.py  map_reduce.py  rebalance.py  reshuffle.py
core/maxframe/dataframe/fetch/: __init__.py  core.py
core/maxframe/dataframe/groupby/: __init__.py  aggregation.py  apply.py  apply_chunk.py  core.py  cum.py  expanding.py  extensions.py  fill.py  getitem.py  head.py  rank.py  rolling.py  sample.py  shift.py  transform.py  utils.py
core/maxframe/dataframe/indexing/: __init__.py  add_prefix_suffix.py  align.py  at.py  droplevel.py  filter.py  get_level_values.py  getitem.py  iat.py  iloc.py  insert.py  loc.py  reindex.py  rename.py  rename_axis.py  reorder_levels.py  reset_index.py  sample.py  set_axis.py  set_index.py  setitem.py  swaplevel.py  take.py  truncate.py  where.py  xs.py
core/maxframe/dataframe/merge/: __init__.py  append.py  combine.py  combine_first.py  compare.py  concat.py  merge.py  update.py
core/maxframe/dataframe/misc/: __init__.py  _duplicate.py  (+38 more)
core/maxframe/learn/: __init__.py  core.py
core/maxframe/lib/: compat.py  compression.py  functools_compat.py  mmh3.pyi  version.py  wrapped_pickle.py
core/maxframe/odpsio/: __init__.py  arrow.py  schema.py  tableio.py  volumeio.py
core/maxframe/remote/: __init__.py  core.py  run_script.py
core/maxframe/serialization/: __init__.py  arrow.py  blob.py  core.pxd  core.pyi  core.pyx  exception.py  maxframe_objects.py  numpy.py  pandas.py  scipy.py
core/maxframe/tensor/: __init__.py  array_utils.py  core.py  operators.py  utils.py
core/maxframe/tests/: test_codegen.py  test_protocol.py  test_udf.py  test_utils.py  utils.py
core/maxframe/utils/: __init__.py  _utils_c.pxd  _utils_c.pyi  _utils_c.pyx  aio.py  collections_.py  datatypes.py  functional.py  odps.py  serialization.py  utils.py
core/maxframe_client/: __init__.py  conftest.py  fetcher.py
core/maxframe_client/clients/: framedriver.py  spe.py
core/maxframe_client/session/: __init__.py  consts.py  graph.py  odps.py  task.py
core/maxframe_client/tests/: test_fetcher.py  test_session.py
(+909 files in other folders)
