[metadata]
description-file = README.md
[options]
packages = find:

[flake8]
max-line-length = 88
select =
    E9,
    E101,
    E111,
    E117,
    E127,
    E201,
    E202,
    E223,
    E224,
    E225,
    E242,
    E251,
    E273,
    E274,
    E275,
    E301,
    E302,
    E303,
    E304,
    E305,
    E401,
    E703,
    E901,
    E999,
    F7,
    F63,
    F82,
    F401,
    F811,
    F821,
    F822,
    F823,
    F841,
    W191,
    W291,
    W292,
    W293,
    W391,
    W601,
    W602,
    W603,
    W605
exclude =
    __init__.py
    __pycache__
    .git/
    env/
    build/
    ci/
    dist/
    docs/
    maxframe/core/lib/nvutils.py
    maxframe/core/lib/uhashring/*
    maxframe/core/lib/version.py
    *.pyi

[coverage:run]
branch = True
cover_pylib = False
parallel = True
concurrency = multiprocessing,thread
include =
    core/maxframe/*
    core/maxframe_client/*
    framedriver/maxframe_framedriver/*
    optimizer/maxframe_optimizer/*
    spe/maxframe_spe/*
    spe_manager/maxframe_spe_manager/*
    odpsctx/odpsctx/*
omit =
    */**/conftest.py
    */tests/*
    core/maxframe/lib/*
    spe/maxframe_spe/compat.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
    if TYPE_CHECKING:

[tool:pytest]
asyncio_mode = auto
timeout = 900
markers =
    pd_compat: mark test as a pandas-compatibility test.
    maxframe_engine: restrict engine types for tests.

[codespell]
ignore-words-list = hist,rcall,fpr,ser,nd,inout,ot,Ba,ba,asend,hart,coo,splitted,datas,fro,rabit,ccompiler
skip = .idea,.git,./build,./docs/build,./core/maxframe/lib,node_modules,static,generated,*.po,*.ts,*.json,*.c,*.cpp,*.cfg,*.sum
