[project]
name = "maxframe"
description = "MaxFrame operator-based data analyze framework"
dynamic = ["readme", "version"]
dependencies = [
    "numpy>=1.19.0,<2.0.0",
    "pandas>=1.0.0",
    "pyodps>=0.12.0",
    "scipy>=1.0",
    "pyarrow>=1.0.0",
    "msgpack>=1.0.0",
    "traitlets>=5.0",
    "cloudpickle>=1.5.0,<3.0.0",
    "pyyaml>=5.1",
    "pickle5; python_version<'3.8'",
    "tornado>=6.0",
    "defusedxml>=0.5.0",
    "tqdm>=4.1.0",
    "importlib_metadata>=1.4",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm>=7.0",
    "wheel",
    "cython>=0.29,<3.1",
    # oldest-supported-numpy is deprecated and only applied for older Python versions
    "oldest-supported-numpy; python_version<'3.9'",
    # Force numpy higher than 2.0, so that built wheels are compatible
    # with both numpy 1 and 2
    "numpy>=2.0.0,<2.3.0; python_version>='3.9'",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "black>=22.3.0",
    "flake8>=5.0.4",
    "flake8-type-checking>=1.0.3",
    "pre-commit>=2.15.0",
    "graphviz>=0.20.1",
]

# Test dependencies.
test = [
    "mock",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "matplotlib>=2.0.0",
    "lightgbm>=3.0.0,<4.0.0",
    "scikit-learn>=1.0",
    "xgboost>=1.6.2,<2.1.0",  # workaround for recent change of xgboost
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools_scm]
root = ".."
version_scheme = "release-branch-semver"
